--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "sanity-gatsby-blog",
+  "name": "gatsby-sanity-minimal-starter",
   "version": "1.0.17",
   "scripts": {
     "build": "lerna run build --parallel",
