upgraded to gatsby 3.0

--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -19,14 +19,15 @@
     "babel-plugin-styled-components": "^1.11.1",
     "date-fns": "^1.30.1",
     "dotenv": "^8.0.0",
-    "gatsby": "^2.31.1",
+    "gatsby": "^3.1.2",
+    "gatsby-image": "^2.0.41",
+    "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-sanity": "^4.0.3",
-    "gatsby-image": "^2.0.41",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
+    "gatsby-source-sanity": "^7.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
